Stub indexes and suggestion completion reworked. (#1237)