@@ -22,7 +22,7 @@ public class lookupItemImportUtil {
       if(needImport) {
         HaxeAddImportHelper.addImport(qname, context.getFile());
       }else {
-        if(!isCorrectClass(resolve.get(0), qname)) {
+        if(!isCorrectClass(resolve.getFirst(), qname)) {
           // replace class with fully qualified path to avoid conflicts
           HaxeReference fullyQualifiedReference = HaxeElementGenerator.createReferenceFromText(element.getProject(), qname);
           if (fullyQualifiedReference!= null) {
@@ -37,7 +37,7 @@ public class lookupItemImportUtil {
 
 
   public static boolean isCorrectClass(PsiElement element, String expectedQname) {
-    HaxeClass haxeClass = PsiTreeUtil.getParentOfType(element, HaxeClass.class);
+    HaxeClass haxeClass = PsiTreeUtil.getStubOrPsiParentOfType(element, HaxeClass.class);
     if (haxeClass != null) {
       String qualifiedName = haxeClass.getQualifiedName();
       return qualifiedName!= null && qualifiedName.equals(expectedQname);
